[gd_scene load_steps=16 format=3 uid="uid://b5gkxlnybim3j"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_b4me2"]
[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_ys4n1"]
[ext_resource type="PackedScene" uid="uid://yswg77qaubwo" path="res://scenes/enemy/enemy.tscn" id="2_d6lx3"]
[ext_resource type="PackedScene" uid="uid://dcexkylwsfrw0" path="res://scenes/player.tscn" id="3_ike62"]
[ext_resource type="PackedScene" uid="uid://uj7r2wn3abm4" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_ro8jj"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="4_plmq2"]
[ext_resource type="Resource" uid="uid://cu6qmhvi8oun6" path="res://characters/warrior/warrior.tres" id="4_xaus0"]
[ext_resource type="Resource" uid="uid://dpts478k0y0pr" path="res://enemies/crab/crab_enemy.tres" id="5_oddth"]
[ext_resource type="Script" path="res://scenes/battle/battle_ui.gd" id="7_64phe"]
[ext_resource type="Script" path="res://scenes/battle/player_handler.gd" id="8_wt2yh"]
[ext_resource type="Script" path="res://scenes/battle/enemy_handler.gd" id="9_aykrk"]
[ext_resource type="Theme" uid="uid://dirrl6yrhfc3a" path="res://main_theme.tres" id="11_onwlb"]
[ext_resource type="Script" path="res://scenes/battle/tooltip.gd" id="14_g8p8q"]
[ext_resource type="Texture2D" uid="uid://d007n5sscvumv" path="res://art/tile_0090.png" id="16_qrwwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv1gi"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_ys4n1")
char_stats = ExtResource("4_xaus0")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.321569, 0.321569, 0.321569, 1)
texture = ExtResource("1_b4me2")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 50)
shape = SubResource("RectangleShape2D_dv1gi")
debug_color = Color(0, 0.595, 0.7, 0.156863)

[node name="Player" parent="." instance=ExtResource("3_ike62")]
position = Vector2(60, 65)
stats = ExtResource("4_xaus0")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_ro8jj")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_wt2yh")
hand = NodePath("../BattleUI/HBoxContainer/MarginContainer3/Hand")

[node name="EnemyHandler" type="Node" parent="."]
script = ExtResource("9_aykrk")

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("2_d6lx3")]
position = Vector2(200, 65)
stats = ExtResource("5_oddth")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_64phe")

[node name="Tooltip" type="PanelContainer" parent="BattleUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 4.0
offset_right = 55.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("11_onwlb")
script = ExtResource("14_g8p8q")

[node name="MarginContainer" type="MarginContainer" parent="BattleUI/Tooltip"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BattleUI/Tooltip/MarginContainer"]
layout_mode = 2

[node name="TooltipIcon" type="TextureRect" parent="BattleUI/Tooltip/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("16_qrwwv")
expand_mode = 1
stretch_mode = 5

[node name="TooltipText" type="RichTextLabel" parent="BattleUI/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "[center]Open a [color=\"dddd22\"]treasure[/color].[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUI"]
custom_minimum_size = Vector2(0, 36)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BattleUI/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ManaUI" type="Panel" parent="BattleUI/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("11_onwlb")

[node name="ManaLabel" type="Label" parent="BattleUI/HBoxContainer/MarginContainer/ManaUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "A/B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="BattleUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_bottom = 2

[node name="Hand" type="HBoxContainer" parent="BattleUI/HBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("4_plmq2")

[node name="MarginContainer2" type="MarginContainer" parent="BattleUI/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="EndTurnButton" type="Button" parent="BattleUI/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("11_onwlb")
text = "End Turn"

[connection signal="pressed" from="BattleUI/HBoxContainer/MarginContainer2/EndTurnButton" to="BattleUI" method="_on_end_turn_button_pressed"]
